	* Added support for Novell privacy settings (Mike Stoddard of Novell)
	* Added ability to initiate multi-user conferences (chats) in Novell (Mike
	  Stoddard of Novell)
	* Find and Save buttons on the debug window (Stu Tomlinson)
	* Plugin Actions menu (Christopher (siege) O'Brien)
	* Plugins can now add entries to the rclick menu of a group (Stu
	  Tomlinson, Christopher (siege) O'Brien)

	Bug Fixes:
	* Novell 64bit fixes, better error messages, and buddy list sync fixes
	  (Mike Stoddard of Novell)
	* Compiles again with gcc 2.96 (Ignacio J. Elia)
	* Gtk2.0 compatibility fixes (Tim Ringenbach)
	* Massive rewrite of MSN support, which should fix a number of issues
	  and make errors easier to interpret. (Felipe Contreras)
	* Gadu-Gadu updates (Andrew Wellington)
	* Dialogs opened from a conversation window are now closed when
	  the conversation window is closed, preventing a crash (Kevin Stange)
	* Updated and standardized blist signals (Gary Kramlich)
	* More doxygen fixes (Jonathan Champ)
	* Copy/paste encoding fixes (Joe Marcus Clarke)
	* IRC disconnect crash fix (Luciano Miguel Ferreira Rocha)
	* Novell prpl works on big endian machines (Novell)
	* Zephyr works on 64 bit machines (Arun A Tharuvai)
	* Yahoo works on 64 bit machines (Gary Kramlich)
	* Print Gadu-Gadu messages to the debug window instead of the console
	* New tabs should scroll correctly again (Tim Ringenbach)
	* Ampersands in links should work right (Tim Ringenbach)
	* IM Image support for AIM is back. It may be buggy, and depends on
	  Direct IM and inherits all its bugs.
	* Direct IM for AIM should be slightly less buggy, and may actually
	  work now, if at least one side isn't behind a NAT or firewall.
	* Made the recieve-*-msg signals match the sending ones (Stu Tomlinson)
	* Documentation updates (Gary Kramlich, Stu Tomlinson)

	Preference Changes(Stu Tomlinson):
	* Added a "none" smiley theme to replace the "Show graphical
	  smileys" option